--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs: 
   install: 
     runs-on: ubuntu-latest
-    steps;
+    steps:
       - name: Checkout
         uses: actions/checkout@v2
 
