--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v3
         with: 
+          working-directory: ./
           browser: chrome
           build: yarn build
           start: yarn start
