--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Cypress run
-        uses: cypress-io/github-action@v3
+        uses: cypress-io/github-action@v4
         with: 
-          working-directory: ./
+          command: npx cypress run
           browser: chrome
-          build: yarn build
-          start: yarn start
+
           
