--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with: 
-          command: npx cypress run
+          command: npx cypress run --record --key 56fd2d8a-7e4e-4167-81e3-31bc727b772d
           browser: chrome
 
           
